Fix project column height on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,10 @@ h4 {
     width: 100%;
 }
 
+.row-flex:before {
+    display: flex;
+}
+
 .history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
